fix spacing

--- a/static/src/stylesheets/module/identity/_consent.scss
+++ b/static/src/stylesheets/module/identity/_consent.scss
@@ -1,18 +1,18 @@
 .identity-wizard--consent {
     .identity-wizard__controls {
-        padding: $gs-gutter;
+        padding: $gs-gutter 0;
         background: #ffffff;
         position: sticky;
         bottom: 0;
         left: 0;
         right: 0;
-        margin-left: $gs-gutter * -1;
-        margin-right: $gs-gutter * -1;
         margin-top: $gs-gutter * 2;
         border-top: 1px solid transparentize($identity-main, .5);
         justify-content: space-between;
-        @include mq(desktop) {
-            margin-top: $gs-gutter * 4;
+        @include mq($until: tablet) {
+            padding: $gs-gutter * .5;
+            margin-left: $gs-gutter * -.5;
+            margin-right: $gs-gutter * -.5;
         }
     }
     .identity-consent-wizard-counter {
